2009-02-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/util.c (type_udv) src/eval.c (add_udv_by_name) src/fit.c
	src/plot2d.c: Prevent strange behaviour due to uninitialized field
	udv_type in a udv entry that has been created but not yet defined.
	Bug #2556225

2009-02-02  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/mouse.c (lookup_key): Use exact match, otherwise F10, F11, or F12
	hotkeys bind to F1.

2009-01-28  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/breaders.c (edf_filetype_function): Fix for long headers.

2009-01-27  Petr Mikulik  <mikulik@physics.muni.cz>

	*  src/pm3d.c (pm3d_plot): Fix for "set pm3d depthorder" ignoring
	"set pm3d interpolate".

2009-01-26  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/post.trm (PS_make_header PS_image): Since the beginning of pm3d,
	the "/Color def" switched between gray and colour map. Choosing "false"
	for "Color", the gray map was always selected regardless the use of a
	custom palette. This led to ambiguities for custom colour palettes if
	they contain grays only. Thus let postscript choose always colour
	palette for interpolated colours ('set palette defined', 'set palette
	file') and colour/gray according to "Color" otherwise ('set palette
	gray', 'set palette rgb').
	SF Patch #2516634: custom colormap using postscript term

2009-01-22  Ethan Merritt  <merritt@u.washington.edu>

	* term/svg.trm:  Back-port changes to svg terminal driver from 4.3 CVS.
	This adds support for dashed lines, additional color modes,
	more standard xml syntax for attributes, and a work-around for viewers
	that fail to correctly inherit <text xml:space="preserve">

2009-01-21  Ethan Merritt  <merritt@u.washington.edu>

	* src/fit.c (fit_command):  Issue a warning if no fittable parameters
	are found.
	Bug #1964774

2009-01-14  Ethan Merritt  <merritt@u.washington.edu>

	* src/util.c: Replace the file util.c with the correct file for this
	CVS branch.  Somehow the copy from the 4.3 branch got incorrectly