@@ -8,6 +8,7 @@ New features, changes and fixes since previous release
 * CHANGE fillstyle empty really is consistently empty (not fill-with-background)
 * CHANGE warn that some options to 'set datafile binary' are not implemented
 * CHANGE handling of custom palette in postscript plots set to "monochrome"
+* CHANGE allow Z axis label in 3D plots to be rotated
 * FIX interpolatation for pm3d surfaces given by both z and colour coordinates
 * FIX infinite loop if axis tick increment is on the order of machine precision
 * FIX initialize x11 enhanced text mode to use most recently requested font 
